Compilador_Final/tests/invalid/test_e09_hover_sin_vuelo.drone
// Test con error 9: hover sin estar en vuelo (error semántico)
drone zumbador;

mision hover_sin_vuelo {
    hover zumbador;
}
